--- a/knowledge_repo/colab_and_pyspark/index.html
+++ b/knowledge_repo/colab_and_pyspark/index.html
@@ -611,7 +611,7 @@ If you have more questions about colab, please <a href="https://research.google.
 <div class="prompt input_prompt">In&nbsp;[10]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Downloading and preprocessing Cars Data downloaded origianlly from https://perso.telecom-paristech.fr/eagan/class/igr204/datasets</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Downloading and preprocessing Cars Data downloaded origianlly from https://perso.telecom-paristech.fr/eagan/class/igr204/datasets<br># Many of these datasets have been cleaned up by Petra Isenberg, Pierre Dragicevic and Yvonne Jansen</span>
 <span class="o">!</span>wget https://jacobceles.github.io/knowledge_repo/colab_and_pyspark/cars.csv
 </pre></div>
 
