--- a/knowledge_repo/colab_and_pyspark/index.html
+++ b/knowledge_repo/colab_and_pyspark/index.html
@@ -4594,7 +4594,7 @@ As you can see, my shuffle partitions should be 1050, not 200.</p>
 
 <br><br>
 <center>
-	<p style="font-size:8pt; line-height:10pt; font-family: 'Cambria','times roman',serif; color: #fff">© Jacob Celestine 2021<br>This content is fully original. All the write-ups is either original or have been properly credited to their sources, if any, and the original link to the dataset has also been provided.<br>All the code has been written by myself without referring anywhere, using knowledge gained through my experience and multiple courses I have attended over the years. If you have any issues, please <a href="mailto:jacobceles@gmail.com">write to me</a> before anything else.</p>
+	<p style="font-size:8pt; line-height:10pt; font-family: 'Cambria','times roman',serif; color: #fff">© Jacob Celestine 2021<br>This content is fully original. All the write-ups is either original or have been properly credited to their sources, if any, and the original link to the dataset has also been provided.<br>All the code has been written by myself without referring anywhere, using knowledge gained through my experience and multiple courses I have attended over the years. If you have any issues, please <a href="mailto:jacobceles@gmail.com">write to me</a> before anything else.<br>The dataset has been sourced from <a href="https://perso.telecom-paristech.fr/eagan/class/igr204/datasets">Project Datasets</a> and have been cleaned up by Petra Isenberg, Pierre Dragicevic and Yvonne Jansen.</p>
 </center>
 <br>
 
