--- a/nightbear/wallpaperapp/terms.html
+++ b/nightbear/wallpaperapp/terms.html
@@ -1,111 +1,104 @@
-<!DOCTYPE html>
-<html>
-   <head>
-      <meta charset='utf-8'>
-      <meta name='viewport' content='width=device-width'>
-      <title>Terms of Service</title>
-      <link rel="stylesheet" type="text/css" href="/css/main.css">
-      <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
-   </head>
-   <body>
-      <h2>Privacy Policy</h2>
-      <p>This page is used to inform visitors regarding my policies with the collection, use, and disclosure
-         of Personal Information if anyone decided to use my Service.
-      </p>
-      <p>If you choose to use my Service, then you agree to the collection and use of information in
-         relation to this policy. The Personal Information that I collect is used for providing and improving
-         the Service. I will not use or share your information with anyone except as described
-         in this Privacy Policy.
-      </p>
-      <p>The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is
-         accessible unless otherwise defined in this Privacy Policy.
-      </p>
-      <p><strong>Information Collection and Use</strong></p>
-      <p>For a better experience, while using our Service, I may require you to provide with certain
-         personally identifiable information, including but not limited to Name, Email address, Contact number, Profile Picture. The information that I request will be retained on your device and is not collected by me in any way.
-      </p>
-      <p>The app does use third party services that may collect information used to identify you.</p>
-      <div>
-         <p>Link to privacy policy of third party service providers used by the app</p>
-         <ul>
-            <li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a></li>
-            <!---->
-            <li><a href="https://firebase.google.com/policies/analytics" target="_blank">Firebase Analytics</a></li>
-            <!----><!---->
-            <li><a href="http://try.crashlytics.com/terms/privacy-policy.pdf" target="_blank">Crashlytics</a></li>
-            <!----><!----><!---->
-         </ul>
-      </div>
-      <p><strong>Log Data</strong></p>
-      <p> I want to inform you that whenever you use my Service, in a case of
-         an error in the app I collect data and information (through third party products) on your phone
-         called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address,
-         device name, operating system version, the configuration of the app when utilizing my Service,
-         the time and date of your use of the Service, and other statistics.
-      </p>
-      <p><strong>Cookies</strong></p>
-      <p>Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers.
-         These are sent to your browser from the websites that you visit and are stored on your device's internal
-         memory.
-      </p>
-      <p>This Service does not use these “cookies” explicitly. However, the app may use third party code and
-         libraries that use “cookies” to collect information and improve their services. You have the option to
-         either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose
-         to refuse our cookies, you may not be able to use some portions of this Service.
-      </p>
-      <p><strong>Service Providers</strong></p>
-      <p> I may employ third-party companies and individuals due to the following reasons:</p>
-      <ul>
-         <li>To facilitate our Service;</li>
-         <li>To provide the Service on our behalf;</li>
-         <li>To perform Service-related services; or</li>
-         <li>To assist us in analyzing how our Service is used.</li>
-      </ul>
-      <p> I want to inform users of this Service that these third parties have access to
-         your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However,
-         they are obligated not to disclose or use the information for any other purpose.
-      </p>
-      <p><strong>Security</strong></p>
-      <p> I value your trust in providing us your Personal Information, thus we are striving
-         to use commercially acceptable means of protecting it. But remember that no method of transmission over
-         the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee
-         its absolute security.
-      </p>
-      <p><strong>Links to Other Sites</strong></p>
-      <p>This Service may contain links to other sites. If you click on a third-party link, you will be directed
-         to that site. Note that these external sites are not operated by me. Therefore, I strongly
-         advise you to review the Privacy Policy of these websites. I have no control over
-         and assume no responsibility for the content, privacy policies, or practices of any third-party sites
-         or services.
-      </p>
-      <p><strong>Children’s Privacy</strong></p>
-      <p>These Services do not address anyone under the age of 13. I do not knowingly collect
-         personally identifiable information from children under 13. In the case I discover that a child
-         under 13 has provided me with personal information, I immediately delete this from
-         our servers. If you are a parent or guardian and you are aware that your child has provided us with personal
-         information, please contact me so that I will be able to do necessary actions.
-      </p>
-      <p><strong>Changes to This Privacy Policy</strong></p>
-      <p> I may update our Privacy Policy from time to time. Thus, you are advised to review
-         this page periodically for any changes. I will notify you of any changes by posting
-         the new Privacy Policy on this page. These changes are effective immediately after they are posted on
-         this page.
-      </p>
-      
-      <h2>Content Policy</h2>
-      <p> The content of this app is user generated. I do not accept any responsibility or liability to the accuracy, content, 
-         completeness, reliability and legality of the information posted on this app/website/page. No warranties, promises 
-         and/or representations of any kind, expressed or implied, are given as to the nature, standard, accuracy or otherwise of the 
-         information provided in this app/website/page nor to the suitability or otherwise of the information. The 
-         views/thoughts/opinions expressed by individuals featured on this platform have been shared with the full knowledge and 
-         consent of the individual and are solely their own and I do not claim any responsibility/ownership or liability for the same. I
-         shall not be held liable for loss or damage of any nature which may arise as a result of this app/website/page. This platform 
-         may provide links to websites owned by third parties. II do not take responsibility for the content of these third party 
-         websites. In addition, I will not be held responsible for the accuracy of third party advertisements. If some content needs 
-         to be removed, please contact me and I will look into it and take suitable action.
-      </p>
-      <h2>Contact Us</h2>
-      <p>If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact
-         me at jacobceles@gmail.com.</p>
-   </body>
-</html>
+<h3><u><strong>Privacy Policy</strong></u></h3>
+
+<p>&nbsp;</p>
+
+<p>&nbsp;</p>
+
+<p>This page is used to inform website visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.</p>
+
+<p>This SERVICE is provided by NightBearInteractive at no cost and is intended for use as is.</p>
+
+<p>If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. we will not use or share your information with anyone except as described in this Privacy Policy.</p>
+
+<p>The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which are accessible at NightBearInteractive apps unless otherwise defined in this Privacy Policy.</p>
+
+<p><strong>Information Collection and Use</strong></p>
+
+<p>For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to IMEI, android. The information that I request is retained on your device and is not collected by me in any way</p>
+
+<p>The app does use third-party services that may collect information used to identify you.</p>
+
+<p>Link to the privacy policy of third party service providers used by the app</p>
+
+<ul style="margin-left:0; margin-right:0">
+	<li><a href="https://www.google.com/policies/privacy/" style="color: #21759b; outline: none;" target="_blank">Google Play Services</a></li>
+	<li><a href="https://support.google.com/admob/answer/6128543?hl=en" style="color: #21759b; outline: none;" target="_blank">AdMob</a></li>
+	<li><a href="https://firebase.google.com/policies/analytics" style="color: #21759b; outline: none;" target="_blank">Firebase Analytics</a></li>
+	<li><a href="https://www.mopub.com/en/legal/privacy" style="color: #21759b; outline: none;" target="_blank">Mopub</a></li>
+</ul>
+
+<p><strong>COLLECTION OF INFORMATION</strong></p>
+
+<p>The data we collect depends on the context of your interactions with us, the choices you make, including your privacy settings, and the products and features you use. The data we collect can include SDK/API/JS code version, browser, Internet service provider, IP address, platform, timestamp, application identifier, application version, application distribution channel, independent deice identifier, iOS ad identifier (IDFA), Android ad master identifier, network card (MAC) address, and international mobile device identification code (IMEI) The equipment model, the terminal manufacturer, the terminal device operating system version, the session start/stop time, the location of the language, the time zone and the network state (WiFi and so on), the hard disk, the CPU, and the battery use, etc.</p>
+
+<p><strong>USE OF PERSONAL DATA</strong></p>
+
+<p>Product Improvement. We use data to continually improve our products, including adding new features or capabilities</p>
+
+<p><strong>SHARING OF PERSONAL DATA</strong></p>
+
+<p>To improve our product and provide you better service, we also share personal data with vendors or agents working on our behalf for the purposes described in this privacy policy. For example, companies we&#39;ve hired to provide data analytical services may need to collect and access personal data to provide those functions. In such cases, these companies must abide by our data privacy and security requirements.</p>
+
+<p><strong>LEGAL BASIS FOR DATA PROCESSING</strong></p>
+
+<p>We process Personal Data for the purposes set out in this Privacy Policy, as described above. Our legal basis to process personal data includes processing that is: necessary for the performance of the contract with you (for example, to provide you with the services you request and to identify and authenticate you so you may use the Sites); necessary to comply with legal requirements (for example, to comply with applicable accounting rules and to make mandatory disclosures to law enforcement); necessary for our legitimate interests (for example, to manage our relationship with you, to ensure the security of our services, to communicate with you about our products and services); and based on consent by our customers (for example, to place certain cookies and to share your information with third parties for advertising purposes).</p>
+
+<p><strong>International Transfers of Personal Data</strong></p>
+
+<p>Our business may require us to transfer your Personal Data to countries outside of the European Economic Area (&ldquo;EEA&rdquo;), including to countries such as the People&rsquo;s Republic of China or Singapore. We take appropriate steps to ensure that recipients of your Personal Data are bound to duties of confidentiality and we implement measures such as standard contractual clauses. A copy of those clauses can be obtained by contacting our Help Center.</p>
+
+<p><strong>Log Data</strong></p>
+
+<p>I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third-party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (&ldquo;IP&rdquo;) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.</p>
+
+<p><strong>Cookies</strong></p>
+
+<p>Cookies are files with a small amount of data that is commonly used as an anonymous unique identifier. These are sent to your browser from the website that you visit and are stored on your device&#39;s internal memory.</p>
+
+<p>This Service does not use these &ldquo;cookies&rdquo; explicitly. However, the app may use third-party code and libraries that use &ldquo;cookies&rdquo; to collect information and to improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.</p>
+
+<p><strong>Service Providers</strong></p>
+
+<p>I may employ third-party companies and individuals due to the following reasons:</p>
+
+<ul style="margin-left:0; margin-right:0">
+	<li>To facilitate our Service;</li>
+	<li>To provide the Service on our behalf;</li>
+	<li>To perform Service-related services; or</li>
+	<li>To assist us in analyzing how our Service is used.</li>
+</ul>
+
+<p>I want to inform users of this Service that these third parties have access to their Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</p>
+
+<p><strong>Security</strong></p>
+
+<p>I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.</p>
+
+<p><strong>Links to Other Sites</strong></p>
+
+<p>This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</p>
+
+<p><strong>Children&rsquo;s Privacy</strong></p>
+
+<p>These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do the necessary actions.</p>
+
+<p>&nbsp;</p>
+
+<h3><strong><a href="">Procedure for Making Claims of Copyright Infringement</a></strong><br />
+<br />
+<strong>Changes to This Privacy Policy</strong></h3>
+
+<p>I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.</p>
+
+<p><strong>Your Rights</strong><br />
+Subject to limitations in applicable law, you are entitled to object to or request the restriction of processing of your Personal Data, and to request access to, rectification, erasure, and portability of your own Personal Data.<br />
+Where the use of your information is based on consent, you can withdraw this consent at any time without affecting the lawfulness of processing based on consent before its withdrawal.<br />
+Requests should be submitted by contacting us through bearinteractive@gmail.com<br />
+If you are aware of changes or inaccuracies in your information, you should inform us of such changes so that our records may be updated or corrected. You may lodge a complaint with a supervisory authority if you consider that our processing of your Personal Data infringes applicable law.<br />
+We retain your Personal Data as long as needed to provide services or products to you, or as required or permitted by applicable laws, such as tax and accounting laws.</p>
+
+<p><strong>Contact Us</strong></p>
+
+<p>If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me.</p>
+
+<p>&nbsp;</p>
